fix 2 respon mobile main

--- a/Estilos/index/index.scss
+++ b/Estilos/index/index.scss
@@ -456,7 +456,7 @@ header {
     .card3,
     .card4 {
       width: 80vw;
-      height: 400px;
+      height: 120vw;
       .card-title {
         font-size: 5vw;
       }
